--- a/client/index.html
+++ b/client/index.html
@@ -29,9 +29,10 @@
         <div class="circle1" id="circle1"></div>
         <div class="circle2" id="circle2"></div>
         <div class="circle3"></div>
-        <script defer src="http://127.0.0.1:3000/socket.io/socket.io.js">
+        <!-- <script defer src="http://127.0.0.1:3000/socket.io/socket.io.js">
             //sanalone wild is exposed and connection with client is established with server
-        </script>
+        </script> -->
+        <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
         <script defer src="/js/app.js"></script>
     </body>
 
